--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,5 +1,6 @@
 ul a.active {
-    color: greenyellow;
+    color: #16A34A;
+    background: transparent;
 }
 .menu-horizontal li {
   margin-right: 16px;
