fixed btn-primary and text-primary classes that are suitable with the projoect

--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,17 @@
 
 
 }
-
+/* bg-gradient-to-r from-[#632EE3] to-[#9F62F2] border-none text-white; */
+/* bg-gradient-to-r from-green-400 via-emerald-500 to-teal-500 border-none text-white; */
 
 
 /* Custom button override */
 .btn-primary {
-  @apply bg-gradient-to-r from-[#632EE3] to-[#9F62F2] border-none text-white;
+  @apply bg-gradient-to-r from-emerald-600 to-green-500 border-none text-white;
 }
 .btn-primary:hover {
   @apply opacity-90;
+}
+.text-primary {
+  @apply bg-gradient-to-r from-emerald-600 to-green-500 bg-clip-text text-transparent;
 }
